- [core] Removed context from the error handler 
- bug #2883633 [export] Export of InnoDB table is incomplete 
+ rfe #2862575 [status] Order query statistics by % desc, skip rows with 0 
+ rfe #2823686 [interface] Increase default height of query window 
+ rfe #2129902 [structure] Don't hide indexes 

3.2.5.0 (not yet released)

3.2.4.0 (not yet released)
- bug [engines] Innodb_buffer_pool_pages_latched no longer returned in status
- bug #2890451 [setup] Inconsistent generated "designer_coords"
- bug #2890443 [mysqli] "No index used in query" exception is reported 
- bug #2891250 [ob] Garbled data in navi frame (PHP 5.2.11 bug)
- bug #2887357 [core] Slow loading times with large databases (partial fix)
- bug #2893931 [lang] Typo and empty message
+ [lang] Russian update, thanks to Victor Volkov
- bug #2823599 [edit] UUID Primary Key wrongly updated
- bug #2895894 [structure] Empty default value not set properly
- bug #2897536 [parser] Copying table with bit field with default
- bug #2893221 [core] Statement may not be safe to log in statement format

3.2.3.0 (2009-10-30)
- patch #2856664 [export] Date, time, and datetime column types now export correctly to
  OpenOffice Spreadsheet, thanks to Thomas Pulickal - jemajoign
- patch #2859788 [parser] Double-character delimiters (bug #2846239), 
  thanks to Thomas Pulickal - jemajoign
- bug #2832600 [export] Slow export when having lots of databases
- bug #2537766 [import] Comments are stripped when editing store procedures 
- bug #2852370 [operations] Renaming database deletes triggers 
- bug #2872247 [interface] Failed opening required 'mysql_charsets.lib.php', thanks to CyberLeo Kitsana - cyberleo
- bug [structure] "In use" table incorrectly reported as "view" 
- bug #2879909 [interface] Removed double htmlspecialchars when editing enum column
- bug #2868328 [relations] Adding foreign key when table name contains a dot
- bug #2883381 [doc] Side effects of MemoryLimit setting